--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
   "devDependencies": {
     "copy-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.22.0",
+    "raw-loader": "^0.5.1",
     "sass-loader": "^4.0.0",
     "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-livereload-plugin": "^0.8.1"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
