--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "sass-loader": "^4.0.0"
   },
   "devDependencies": {
+    "babel": "^6.5.2",
+    "babel-core": "^6.13.2",
     "copy-webpack-plugin": "^3.0.1",
     "html-webpack-plugin": "^2.22.0",
     "raw-loader": "^0.5.1",
