--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "resume",
   "main": "webpack.config.js",
   "dependencies": {
-    "sass-loader": "^4.0.0"
+    "css-loader": "^0.23.1",
+    "node-sass": "^3.8.0",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1"
   },
   "devDependencies": {
     "babel": "^6.5.2",
