--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "webpack-dev-server --progress --colors --hot --inline"
+    "start": "webpack-dev-server --progress --colors --hot --inline"
   },
   "repository": {
     "type": "git",
