--- a/package.json
+++ b/package.json
@@ -1,44 +1,64 @@
 {
-  "name": "wesley",
-  "version": "1.0.0",
-  "description": "resume",
-  "main": "webpack.config.js",
+  "name": "resume",
+  "version": "2.0.0",
+  "description": "a resume for a programmer",
+  "author": "wesley",
+  "private": false,
+  "scripts": {
+    "dev": "node build/dev-server.js",
+    "start": "npm run dev",
+    "build": "node build/build.js"
+  },
   "dependencies": {
-    "css-loader": "^0.23.1",
-    "node-sass": "^3.8.0",
-    "sass-loader": "^4.0.0",
-    "style-loader": "^0.13.1",
-    "whatwg-fetch": "^2.0.1"
+    "node-sass": "^4.5.3",
+    "vue": "^2.5.2",
+    "vue-resource": "^1.3.4",
+    "vue-router": "^3.0.1"
   },
   "devDependencies": {
-    "babel": "^6.5.2",
-    "babel-core": "^6.13.2",
-    "copy-webpack-plugin": "^3.0.1",
-    "css-loader": "^0.23.1",
-    "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "html-webpack-plugin": "^2.22.0",
-    "raw-loader": "^0.5.1",
-    "sass-loader": "^4.1.1",
-    "vue-loader": "^10.0.2",
-    "webpack": "^2.1.0-beta.21",
-    "webpack-dev-server": "^1.16.2"
+    "autoprefixer": "^7.1.2",
+    "babel-core": "^6.22.1",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.2",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.22.0",
+    "chalk": "^2.0.1",
+    "connect-history-api-fallback": "^1.3.0",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.28.0",
+    "eventsource-polyfill": "^0.9.6",
+    "express": "^4.14.1",
+    "extract-text-webpack-plugin": "^3.0.0",
+    "file-loader": "^1.1.4",
+    "friendly-errors-webpack-plugin": "^1.6.1",
+    "html-webpack-plugin": "^2.30.1",
+    "http-proxy-middleware": "^0.17.3",
+    "opn": "^5.1.0",
+    "optimize-css-assets-webpack-plugin": "^3.2.0",
+    "ora": "^1.2.0",
+    "portfinder": "^1.0.13",
+    "rimraf": "^2.6.0",
+    "sass-loader": "^6.0.6",
+    "semver": "^5.3.0",
+    "shelljs": "^0.7.6",
+    "url-loader": "^0.5.8",
+    "vue-loader": "^13.3.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.5.2",
+    "webpack": "^3.6.0",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-middleware": "^1.12.0",
+    "webpack-hot-middleware": "^2.18.2",
+    "webpack-merge": "^4.1.0"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server"
+  "engines": {
+    "node": ">= 4.0.0",
+    "npm": ">= 3.0.0"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/eternityspring/eternityspring.github.io.git"
-  },
-  "keywords": [
-    "resume",
-    "profile"
-  ],
-  "author": "wesley wang",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/eternityspring/eternityspring.github.io/issues"
-  },
-  "homepage": "https://github.com/eternityspring/eternityspring.github.io#readme"
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not ie <= 8"
+  ]
 }
